# template-uv-python-research-software

./: .gitignore  .pre-commit-config.yaml  .pre-commit-config.yaml.jinja  AGENTS.md  CITATION.cff  CITATION.cff.jinja  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTING.md.jinja  README.md  README.md.jinja  copier.yaml  pyproject.toml  pyproject.toml.jinja  renovate.json
.agents/skills/ci-cd-and-automation/: SKILL.md
.agents/skills/code-review-and-quality/: SKILL.md
.agents/skills/debugging-and-error-recovery/: SKILL.md
.agents/skills/incremental-implementation/: SKILL.md
.agents/skills/learning-opportunities/: SKILL.md
.agents/skills/test-driven-development/: SKILL.md
.github/: CODEOWNERS.jinja  dependabot.yml
.github/ISSUE_TEMPLATE/: issue.yml
.github/workflows/: draft-release.yml.jinja  publish-docs.yml  publish-docs.yml.jinja  publish-pypi.yml  publish-pypi.yml.jinja  run-tests.yml.jinja  test-template.yml
docs/src/: conf.py  conf.py.jinja  index.md  python-api.md  python-api.md.jinja
src/example_project/: main.py
src/notebooks/: example_notebook.ipynb  example_notebook.ipynb.jinja  example_notebook.py  example_notebook.py.jinja
src/{{ project_name }}/: cli.py.jinja
src/{{ python_package_name }}/: cli.py.jinja
tests/: conftest.py  test_cli.py.jinja  test_main.py  test_main.py.jinja  test_template.py
