[build-system]
build-backend = "setuptools.build_meta"
requires = [ "setuptools>=82.0.1", "setuptools-scm>=10.0.5" ]

[project]
name = "template-uv-python-research-software"
description = "A template for Pythonic research software with environment management through uv."
readme = "README.md"
authors = [
  { name = "d33bs" },
]
requires-python = ">=3.11"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dynamic = [ "version" ]
dependencies = [
  "copier>=9.15.1",
]

[dependency-groups]
dev = [
  "coverage[toml]>=7.14",
  "pandas>=2.2.3",
  "pytest>=9.0.3",
  "pytest-cov>=6.2.1",
]

[tool.ruff]
target-version = "py311"
line-length = 88
fix = true
lint.select = [
  # flake8-builtins
  "A",
  # flake8-annotations
  "ANN",
  # flake8-comprehensions
  "C4",
  # mccabe
  "C90",
  # pycodestyle
  "E",
  # pyflakes
  "F",
  # isort
  "I",
  # pylint
  "PL",
  # ruff
  "RUF",
  # flake8-simplify
  "SIM",
  "W",
]
# Ignore `F401` (unused imports) for `__init__.py` file
lint.per-file-ignores."__init__.py" = [ "F401" ]

[tool.vulture]
paths = [ "src/{{ python_package_name }}", "tests" ]
min_confidence = 90

[tool.pytest]
ini_options.pythonpath = [ "." ]
ini_options.addopts = [
  "--cov=tests",
  "--cov-report=term-missing",
  "--cov-report=xml",
]

[tool.coverage]
run.branch = true
run.source = [ "tests" ]
report.show_missing = true
report.skip_covered = true
